--- a/src/App.scss
+++ b/src/App.scss
@@ -53,69 +53,78 @@ $charcoal: #ccc;
 
 // Weather CSS
 
+.container {
+  background-size: cover;
+}
+
 .wrapper {
-  background: linear-gradient(to right, #50c8f4, #fff);
+  // background: linear-gradient(to right, #e67e22, #e74c3c);
+  // background: url("img/sky.jpg") center center no-repeat;
   height: 100vh;
-  display: inline;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .main {
-  height: 90vh;
+  height: 95vh;
   background: #fff;
   box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
-  width: 100%;
+  width: 92%;
   margin: 0 auto;
   display: flex;
 }
 
 .title-container {
-  height: 90vh;
+  height: 100vh;
   background: url("img/bg.jpg") center center no-repeat;
   background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
-  text-align: center;
+  text-align: left;
   color: #000;
+  width: 40%;
+  padding-left: 30px;
+  padding-right: 20px;
 }
 
-.title-container__title {
-  font-size: 50px;
-  letter-spacing: 2px;
-  line-height: 1.3;
-  font-family: 'Roboto Slab', serif;
-}
+// .title-container__title {
+//   font-size: 40px;
+//   letter-spacing: 2px;
+//   font-family: 'Roboto Slab', serif;
+// }
 
-.title-container__subtitle {
-  font-style: italic;
-  font-weight: 100;
-  letter-spacing: 1px;
-  line-height: 1.5;
-  font-family: "Merriweather", serif;
-}
+// .title-container__subtitle {
+//   font-style: italic;
+//   font-weight: 100;
+//   letter-spacing: 1px;
+//   font-family: "Merriweather", serif;
+// }
 
 .form-container {
   background-color: #2c3e50;
-  height: 90vh;
-  padding-top: 100px;
-  padding-left: 50px;
+  height: 100vh;
+  padding-top: 50px;
+  padding-left: 90px;
+  margin-bottom: 100px;
+  overflow: hidden;
+  color: white;
 }
 
-.styled-select {
-  background-color: transparent;
-  border: 0;
-  border-bottom: solid 1px #f16051;
-  width: 20%;
-  padding-bottom: 4px;
-  color: #fff !important;
-  font-weight: lighter;
-  letter-spacing: 2px;
-  margin-bottom: 30px;
-  margin-right: 20px;
-  font-size: 20px;
-}
+// .styled-select {
+//   background-color: transparent;
+//   border: 0;
+//   border-bottom: solid 1px #f16051;
+//   width: 20%;
+//   padding-bottom: 4px;
+//   color: #fff !important;
+//   font-weight: lighter;
+//   letter-spacing: 2px;
+//   margin-bottom: 30px;
+//   margin-right: 20px;
+//   font-size: 20px;
+// }
 
 input[type="text"] {
   background-color: transparent;
@@ -186,4 +195,40 @@ button:active {
   font-size: 20px;
   letter-spacing: 1px;
   font-weight: 200;
+}
+
+// Left weather CSS
+
+.weather__infoleft {
+  font-size: 20px;
+  letter-spacing: 2px;
+  margin-top: -260px;
+  background-color: #bdeefc;
+  opacity: .8;
+  padding-left: 20px;
+  padding-top: 10px;
+}
+
+.weather__keyleft {
+  color: #f16051;
+}
+
+.weather__valueleft {
+  color: green;
+  font-weight: 100;
+}
+
+.weather__condition {
+  color: #3e4042;
+  font-size: 28px;
+}
+
+.weather__valueleftdetail {
+  color: #3e4042;
+}
+
+.weather__error {
+  color: #f16051;
+  font-size: 20px;
+  letter-spacing: 1px;
 }
