--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -6,6 +6,12 @@ $charcoal: #bbb;
   display: flex;
   height: 100px;
   padding: 0 20px;
+  font-weight: 200;
+  // background: url("../img/mountain.jpg") center center no-repeat;
+  // background-size: cover;
+  background: #2980B9;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   a,
   span {
