Completing the react client app.

--- a/src/App.scss
+++ b/src/App.scss
@@ -69,7 +69,7 @@ $charcoal: #ccc;
 .main {
   height: 95vh;
   background: #fff;
-  box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
+  // box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
   width: 92%;
   margin: 0 auto;
   display: flex;
@@ -116,7 +116,11 @@ $charcoal: #ccc;
   margin-bottom: 100px;
   overflow: hidden;
   color: #000;
-  background: url('img/back.jpeg') center center no-repeat;
+  background: url('img/skyback.jpg') center center no-repeat;
+  background-size: cover;
+  // background: #2980B9;  /* fallback for old browsers */
+  // background: -webkit-linear-gradient(to left, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
+  // background: linear-gradient(to left, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .profileform {
@@ -241,7 +245,7 @@ button:active {
   margin: 50px;
   border-radius:10px;
   border: 1px solid #ccc;
-  background: #fff;
+  background: #bee5eb;
   float: left;
   padding: 20px;
   margin-left: 20%;
